fix(minor fixes), doc(add): added new parameters to swagger