@@ -1,14 +1,24 @@
 package com.weather.api.emibeanatte.security.entity;
 
-import java.io.Serializable;
-import java.util.Arrays;
+
 import java.util.Collection;
-import javax.persistence.*;
+import java.util.List;
+
 import lombok.*;
-import javax.validation.constraints.NotNull;
+
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.OneToOne;
+import jakarta.persistence.Table;
 
 @Entity
 @Table(name = "users")
@@ -16,25 +26,19 @@ import org.springframework.security.core.userdetails.UserDetails;
 @Setter
 @NoArgsConstructor
 @AllArgsConstructor
-public class User implements Serializable, UserDetails {
+public class User implements UserDetails {
 
     @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private int id;
-    @NotNull
-    @Column(unique = true)
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private Long id;
+    @Column(name = "name", unique = true)
     private String username;
-    @NotNull
+    @Column(nullable = false)
     private String password;
     
     @OneToOne(cascade = CascadeType.REMOVE)
     @JoinColumn(name = "role_id", referencedColumnName = "id", nullable = false)
     private Role role;
-
-    public User(@NotNull String username, @NotNull String password) {
-        this.username = username;
-        this.password = password;
-    }
     
     public User setRole(Role role) {
         this.role = role;
@@ -44,7 +48,7 @@ public class User implements Serializable, UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + role.getRoleName().toString());
-        return Arrays.asList(authority);
+        return List.of(authority);
     }
     
     @Override
